[package]
name = "latch_iter"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["iterator", "adapter"]
description = "A latching iterator adapter"
homepage = "https://github.com/SenojLuap/latch_iter"
repository = "https://github.com/SenojLuap/latch_iter"
readmen = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
